--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
+        <img draggable="false" src="https://kereds.github.io/img/ss.jpg" alt="profile image" title=""
+            height="200" width="200" />
         <h1>Derek Fang</h1>
         <span>Welcome to my blog</span><div class="social-icons">
     <a href="https://www.facebook.com/KereDs1213/" target="_blank" rel="noopener noreferrer me" title="Fangderek">
@@ -185,7 +187,7 @@
 </svg>
     </a>
 </div>
-<h3></h3>
+<h3>隨便寫寫</h3>
     </div>
 </div>
 
