--- a/search/index.html
+++ b/search/index.html
@@ -5,18 +5,18 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Search | My blog</title>
+<title>Search | KereDs的個人網站</title>
 <meta name="keywords" content="">
-<meta name="description" content="Search - My blog">
+<meta name="description" content="Search - KereDs的個人網站">
 <meta name="author" content="Derek">
 <link rel="canonical" href="https://kereds.github.io/search/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.2291a093bbe7c62c4b07402b7b85c50ae2d11db679d64514615ff03998c228b5.css" integrity="sha256-IpGgk7vnxixLB0Are4XFCuLRHbZ51kUUYV/wOZjCKLU=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.f2c929b23def4bbbd806f51d321b0775e075febe7ad03ac69081f496bb2e30ff.js" integrity="sha256-8skpsj3vS7vYBvUdMhsHdeB1/r560DrGkIH0lrsuMP8="></script>
-<link rel="icon" href="https://kereds.github.io/letterd.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://kereds.github.io/letterd.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="https://kereds.github.io/letterd.ico">
-<link rel="apple-touch-icon" href="https://kereds.github.io/letterd.ico">
-<link rel="mask-icon" href="https://kereds.github.io/letterd.ico">
+<link rel="icon" href="https://kereds.github.io/img/letterd.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://kereds.github.io/img/letterd.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="https://kereds.github.io/img/letterd.ico">
+<link rel="apple-touch-icon" href="https://kereds.github.io/img/letterd.ico">
+<link rel="mask-icon" href="https://kereds.github.io/img/letterd.ico">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -106,10 +106,10 @@
   },
   "publisher": {
     "@type": "Organization",
-    "name": "My blog",
+    "name": "KereDs的個人網站",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://kereds.github.io/letterd.ico"
+      "url": "https://kereds.github.io/img/letterd.ico"
     }
   }
 }
@@ -206,7 +206,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="https://kereds.github.io/">My blog</a></span>
+    <span>&copy; 2022 <a href="https://kereds.github.io/">KereDs的個人網站</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
