--- a/about/index.html
+++ b/about/index.html
@@ -5,19 +5,19 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>About | My blog</title>
+<title>About | KereDs的個人網站</title>
 <meta name="keywords" content="">
-<meta name="description" content="About - My blog">
+<meta name="description" content="About - KereDs的個人網站">
 <meta name="author" content="Derek">
 <link rel="canonical" href="https://kereds.github.io/about/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.2291a093bbe7c62c4b07402b7b85c50ae2d11db679d64514615ff03998c228b5.css" integrity="sha256-IpGgk7vnxixLB0Are4XFCuLRHbZ51kUUYV/wOZjCKLU=" rel="preload stylesheet" as="style">
 <script defer crossorigin="anonymous" src="/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js" integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG&#43;9vmJ0cTS&#43;ovo0FeA="
     onload="hljs.initHighlightingOnLoad();"></script>
-<link rel="icon" href="https://kereds.github.io/letterd.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://kereds.github.io/letterd.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="https://kereds.github.io/letterd.ico">
-<link rel="apple-touch-icon" href="https://kereds.github.io/letterd.ico">
-<link rel="mask-icon" href="https://kereds.github.io/letterd.ico">
+<link rel="icon" href="https://kereds.github.io/img/letterd.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://kereds.github.io/img/letterd.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="https://kereds.github.io/img/letterd.ico">
+<link rel="apple-touch-icon" href="https://kereds.github.io/img/letterd.ico">
+<link rel="mask-icon" href="https://kereds.github.io/img/letterd.ico">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -107,10 +107,10 @@
   },
   "publisher": {
     "@type": "Organization",
-    "name": "My blog",
+    "name": "KereDs的個人網站",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://kereds.github.io/letterd.ico"
+      "url": "https://kereds.github.io/img/letterd.ico"
     }
   }
 }
@@ -288,21 +288,13 @@
     <polyline points="22,6 12,13 2,6"></polyline>
 </svg>
     </a>
-    <a href="index.xml" target="_blank" rel="noopener noreferrer me" title="RSS">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-    stroke-linecap="round" stroke-linejoin="round">
-    <path d="M4 11a9 9 0 0 1 9 9" />
-    <path d="M4 4a16 16 0 0 1 16 16" />
-    <circle cx="5" cy="19" r="1" />
-</svg>
-    </a>
 </div>
 
 </footer>
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="https://kereds.github.io/">My blog</a></span>
+    <span>&copy; 2022 <a href="https://kereds.github.io/">KereDs的個人網站</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
