--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>My blog</title>
+<title>KereDs的個人網站</title>
 
 <meta name="description" content="">
 <meta name="author" content="Derek">
 <link rel="canonical" href="https://kereds.github.io/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.2291a093bbe7c62c4b07402b7b85c50ae2d11db679d64514615ff03998c228b5.css" integrity="sha256-IpGgk7vnxixLB0Are4XFCuLRHbZ51kUUYV/wOZjCKLU=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://kereds.github.io/letterd.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://kereds.github.io/letterd.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="https://kereds.github.io/letterd.ico">
-<link rel="apple-touch-icon" href="https://kereds.github.io/letterd.ico">
-<link rel="mask-icon" href="https://kereds.github.io/letterd.ico">
+<link rel="icon" href="https://kereds.github.io/img/letterd.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://kereds.github.io/img/letterd.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="https://kereds.github.io/img/letterd.ico">
+<link rel="apple-touch-icon" href="https://kereds.github.io/img/letterd.ico">
+<link rel="mask-icon" href="https://kereds.github.io/img/letterd.ico">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <link rel="alternate" type="application/rss+xml" href="https://kereds.github.io/index.xml">
@@ -57,25 +57,25 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="My blog" />
+</noscript><meta property="og:title" content="KereDs的個人網站" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://kereds.github.io/" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="My blog"/>
+<meta name="twitter:title" content="KereDs的個人網站"/>
 <meta name="twitter:description" content=""/>
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "My blog",
+  "name": "KereDs的個人網站",
   "url": "https://kereds.github.io/",
   "description": "",
-  "thumbnailUrl": "https://kereds.github.io/letterd.ico",
+  "thumbnailUrl": "https://kereds.github.io/img/letterd.ico",
   "sameAs": [
-      "https://www.facebook.com/KereDs1213/", "https://www.instagram.com/fangderek/", "mailto:6500dr@gmail.com", "index.xml"
+      "https://www.facebook.com/KereDs1213/", "https://www.instagram.com/fangderek/", "mailto:6500dr@gmail.com"
   ]
 }
 </script>
@@ -178,14 +178,6 @@
     <polyline points="22,6 12,13 2,6"></polyline>
 </svg>
     </a>
-    <a href="index.xml" target="_blank" rel="noopener noreferrer me" title="RSS">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-    stroke-linecap="round" stroke-linejoin="round">
-    <path d="M4 11a9 9 0 0 1 9 9" />
-    <path d="M4 4a16 16 0 0 1 16 16" />
-    <circle cx="5" cy="19" r="1" />
-</svg>
-    </a>
 </div>
 <h3>隨便寫寫</h3>
     </div>
@@ -194,7 +186,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="https://kereds.github.io/">My blog</a></span>
+    <span>&copy; 2022 <a href="https://kereds.github.io/">KereDs的個人網站</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
