--- a/search.fr/index.html
+++ b/search.fr/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="SearchL2 - KereDs的個人網站">
 <meta name="author" content="Derek">
 <link rel="canonical" href="https://kereds.github.io/search.fr/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.5f066b7afb4397380997e3e6611cc4b1ff56f73cccf7b88cb3573f9dfef047e5.css" integrity="sha256-XwZrevtDlzgJl&#43;PmYRzEsf9W9zzM97iMs1c/nf7wR&#43;U=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.8b6a10c5eb990faa8c830037ea5585b9a9cf9f93d924b4ddb3f631fcf1714dd4.css" integrity="sha256-i2oQxeuZD6qMgwA36lWFuanPn5PZJLTds/Yx/PFxTdQ=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.f2c929b23def4bbbd806f51d321b0775e075febe7ad03ac69081f496bb2e30ff.js" integrity="sha256-8skpsj3vS7vYBvUdMhsHdeB1/r560DrGkIH0lrsuMP8="></script>
 <link rel="icon" href="https://kereds.github.io/img/letterd.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://kereds.github.io/img/letterd.ico">
