--- a/404.html
+++ b/404.html
@@ -7,10 +7,10 @@
 <meta name="robots" content="index, follow">
 <title>404 Page not found | KereDs的個人網站</title>
 <meta name="keywords" content="">
-<meta name="description" content="">
+<meta name="description" content="KereDs的個人網站，KereDs，Derek Fang，方德霖">
 <meta name="author" content="Derek">
 <link rel="canonical" href="https://kereds.github.io/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.8b6a10c5eb990faa8c830037ea5585b9a9cf9f93d924b4ddb3f631fcf1714dd4.css" integrity="sha256-i2oQxeuZD6qMgwA36lWFuanPn5PZJLTds/Yx/PFxTdQ=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.811e7d5696db6bf079de4535cecc58a702c1dd4ef0e065661c5c14ae56107032.css" integrity="sha256-gR59Vpbba/B53kU1zsxYpwLB3U7w4GVmHFwUrlYQcDI=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://kereds.github.io/img/letterd.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://kereds.github.io/img/letterd.ico">
 <link rel="icon" type="image/png" sizes="32x32" href="https://kereds.github.io/img/letterd.ico">
@@ -55,13 +55,13 @@
 
     </style>
 </noscript><meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="" />
+<meta property="og:description" content="KereDs的個人網站，KereDs，Derek Fang，方德霖" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://kereds.github.io/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:description" content="KereDs的個人網站，KereDs，Derek Fang，方德霖"/>
 
 </head>
 
