--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <meta name="robots" content="index, follow">
 <title>KereDs的個人網站</title>
 
-<meta name="description" content="">
+<meta name="description" content="KereDs的個人網站，KereDs，Derek Fang，方德霖">
 <meta name="author" content="Derek">
 <link rel="canonical" href="https://kereds.github.io/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.8b6a10c5eb990faa8c830037ea5585b9a9cf9f93d924b4ddb3f631fcf1714dd4.css" integrity="sha256-i2oQxeuZD6qMgwA36lWFuanPn5PZJLTds/Yx/PFxTdQ=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.811e7d5696db6bf079de4535cecc58a702c1dd4ef0e065661c5c14ae56107032.css" integrity="sha256-gR59Vpbba/B53kU1zsxYpwLB3U7w4GVmHFwUrlYQcDI=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://kereds.github.io/img/letterd.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://kereds.github.io/img/letterd.ico">
 <link rel="icon" type="image/png" sizes="32x32" href="https://kereds.github.io/img/letterd.ico">
@@ -58,13 +58,13 @@
 
     </style>
 </noscript><meta property="og:title" content="KereDs的個人網站" />
-<meta property="og:description" content="" />
+<meta property="og:description" content="KereDs的個人網站，KereDs，Derek Fang，方德霖" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://kereds.github.io/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="KereDs的個人網站"/>
-<meta name="twitter:description" content=""/>
+<meta name="twitter:description" content="KereDs的個人網站，KereDs，Derek Fang，方德霖"/>
 
 <script type="application/ld+json">
 {
@@ -72,7 +72,7 @@
   "@type": "Organization",
   "name": "KereDs的個人網站",
   "url": "https://kereds.github.io/",
-  "description": "",
+  "description": "KereDs的個人網站，KereDs，Derek Fang，方德霖",
   "thumbnailUrl": "https://kereds.github.io/img/letterd.ico",
   "sameAs": [
       "https://www.facebook.com/KereDs1213/", "https://www.instagram.com/fangderek/", "mailto:6500dr@gmail.com"
