--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   "description": "KereDs的個人網站，KereDs，Derek Fang，方德霖",
   "thumbnailUrl": "https://kereds.github.io/img/letterd.ico",
   "sameAs": [
-      "https://www.facebook.com/KereDs1213/", "https://www.instagram.com/fangderek/", "mailto:6500dr@gmail.com"
+      "https://www.facebook.com/KereDs1213/", "https://www.instagram.com/fangderek/", "mailto:6500dr@gmail.com", "https://www.linkedin.com/in/%E5%BE%B7%E9%9C%96-%E6%96%B9-98b506237/"
   ]
 }
 </script>
@@ -176,6 +176,14 @@
     stroke-linecap="round" stroke-linejoin="round">
     <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
     <polyline points="22,6 12,13 2,6"></polyline>
+</svg>
+    </a>
+    <a href="https://www.linkedin.com/in/%E5%BE%B7%E9%9C%96-%E6%96%B9-98b506237/" target="_blank" rel="noopener noreferrer me" title="Linkedin">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+    stroke-linecap="round" stroke-linejoin="round">
+    <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+    <rect x="2" y="9" width="4" height="12"></rect>
+    <circle cx="4" cy="4" r="2"></circle>
 </svg>
     </a>
 </div>
