--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 <meta name="description" content="KereDs的個人網站，KereDs，Derek Fang，方德霖">
 <meta name="author" content="Derek">
 <link rel="canonical" href="https://kereds.github.io/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.811e7d5696db6bf079de4535cecc58a702c1dd4ef0e065661c5c14ae56107032.css" integrity="sha256-gR59Vpbba/B53kU1zsxYpwLB3U7w4GVmHFwUrlYQcDI=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.3cd09b9895e8a79f4abf513b3529eedae47a14a6b1440b2bafe78864032cd1ea.css" integrity="sha256-PNCbmJXop59Kv1E7NSnu2uR6FKaxRAsrr&#43;eIZAMs0eo=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://kereds.github.io/img/letterd.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://kereds.github.io/img/letterd.ico">
 <link rel="icon" type="image/png" sizes="32x32" href="https://kereds.github.io/img/letterd.ico">
