--- a/search.fr/index.html
+++ b/search.fr/index.html
@@ -10,7 +10,7 @@
 <meta name="description" content="SearchL2 - KereDs的個人網站">
 <meta name="author" content="Derek">
 <link rel="canonical" href="https://kereds.github.io/search.fr/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.811e7d5696db6bf079de4535cecc58a702c1dd4ef0e065661c5c14ae56107032.css" integrity="sha256-gR59Vpbba/B53kU1zsxYpwLB3U7w4GVmHFwUrlYQcDI=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.3cd09b9895e8a79f4abf513b3529eedae47a14a6b1440b2bafe78864032cd1ea.css" integrity="sha256-PNCbmJXop59Kv1E7NSnu2uR6FKaxRAsrr&#43;eIZAMs0eo=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
 <script defer crossorigin="anonymous" src="/assets/js/search.f2c929b23def4bbbd806f51d321b0775e075febe7ad03ac69081f496bb2e30ff.js" integrity="sha256-8skpsj3vS7vYBvUdMhsHdeB1/r560DrGkIH0lrsuMP8="></script>
 <link rel="icon" href="https://kereds.github.io/img/letterd.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://kereds.github.io/img/letterd.ico">
